--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -141,7 +141,9 @@
         android:id="@+id/DetailsButton"
         android:layout_width="99dp"
         android:layout_height="48dp"
-        android:background="#FDFDFD"
+        android:background="#CC800B0B"
+        android:backgroundTint="#CC800B0B"
+        android:backgroundTintMode="#CC800B0B"
         android:text="@string/details"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/congratsBox"
