update greywallet.png on navigation_items.xml

--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/payPageButton"
-        android:icon="@drawable/pay_icon"
+        android:icon="@drawable/greywallet"
         android:title="Pay"/>
 
     <item
