--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -130,7 +130,7 @@
             <TextView
                 android:id="@+id/coffee_image"
                 android:layout_width="0dp"
-                android:layout_height="250dp"
+                android:layout_height="200dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginEnd="50dp"
@@ -189,9 +189,7 @@
         app:itemRippleColor="#C1C1C1"
         app:itemTextColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/navigation_items">
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+        app:menu="@menu/navigation_items"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
